--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@changesets/cli": "^2.26.0",
     "@types/node": "^18.11.18",
     "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "zod": "^3.20.2"
   }
 }
